--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - /pd_zurg/data/sorted/shows:/data/sorted/shows
       ## Location for sorted movies
       - /pd_zurg/data/sorted/movies:/data/sorted/movies
+      ## Location for Plex_Debrid catalog.csv
+      - /appdata/pd_zurg/RB:/catalog
     environment:
       - TZ=
     devices:
