--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       CATALOG_PATH: "/mnt/xyz/abc/catalog"
     volumes:
       # Location of zurg folder to monitor
-      - ${SRC_DIR}:${SRC_DIR}
+      - ${SRC_DIR}:/mnt
       # Location for sorted items
-      - ${DEST_DIR}:${DEST_DIR}
+      - ${DEST_DIR}:/mnt
       # Location for Plex_Debrid catalog.csv
       - ${CATALOG_PATH}:/catalog
     devices:
